# py-mochi-colza

./: README.md  setup.py
pycolza/: admin.py  client.py
pycolza/src/: .client_module.cpp.swp  admin_module.cpp  client_module.cpp
test/: CMakeLists.txt  TestPipeline.cpp  TestPipeline.hpp  client.py  pipeline.json  run-server.sh
